# flat-pressure

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  ThirdPartyNotice.txt  build.py
.github/workflows/: build.yml  coverage.yml  release.yml
examples/: CMakeLists.txt  remote_soem.cpp  remote_twincat.cpp  runner.hpp  simulator.cpp  soem.cpp  twincat.cpp  util.hpp
examples/tests/: advanced.hpp  bessel.hpp  flag.hpp  focus.hpp  group.hpp  holo.hpp  kishi_new_b4jikken.hpp  mod_audio_file.hpp  plane.hpp  stm.hpp  transtest.hpp
examples/tests/HoloFlatData/: holo_rad_20.csv  holo_rad_30.csv  holo_rad_40.csv  holo_rad_50.csv
include/: autd3.hpp
include/autd3/: def.hpp  exception.hpp  native_methods.hpp
include/autd3/controller/: builder.hpp  controller.hpp
include/autd3/driver/: autd3_device.hpp  firmware_version.hpp  link.hpp
include/autd3/driver/common/: drive.hpp  emit_intensity.hpp  loop_behavior.hpp  phase.hpp  sampling_config.hpp
include/autd3/driver/datagram/: clear.hpp  datagram.hpp  debug.hpp  force_fan.hpp  gain.hpp  mod_delay.hpp  modulation.hpp  phase_filter.hpp  reads_fpga_state.hpp  silencer.hpp  synchronize.hpp  with_segment.hpp
include/autd3/driver/datagram/gain/: base.hpp  cache.hpp  gain.hpp  transform.hpp
include/autd3/driver/datagram/modulation/: base.hpp  cache.hpp  modulation.hpp  radiation_pressure.hpp  transform.hpp
include/autd3/driver/datagram/stm/: focus.hpp  gain.hpp  stm.hpp
include/autd3/driver/fpga/defined/: fpga_state.hpp
include/autd3/driver/geometry/: device.hpp  geometry.hpp  rotation.hpp  transducer.hpp
include/autd3/gain/: bessel.hpp  cache.hpp  focus.hpp  gain.hpp  group.hpp  holo.hpp  null.hpp  plane.hpp  trans_test.hpp  transform.hpp  uniform.hpp
include/autd3/gain/holo/: amplitude.hpp  backend.hpp  backend_cuda.hpp  backend_nalgebra.hpp  constraint.hpp  greedy.hpp  gs.hpp  gspat.hpp  holo.hpp  lm.hpp  naive.hpp  sdp.hpp
include/autd3/internal/: controller.hpp  datagram.hpp  def.hpp  emit_intensity.hpp  stm.hpp
include/autd3/internal/native_methods/: autd3capi-def.h  autd3capi-gain-holo.h  autd3capi-link-visualizer.h  autd3capi.h
include/autd3/link/: audit.hpp  nop.hpp  simulator.hpp  soem.hpp  twincat.hpp  visualizer.hpp
include/autd3/modulation/: audio_file.hpp  cache.hpp  fourier.hpp  modulation.hpp  radiation_pressure.hpp  sine.hpp  square.hpp  static.hpp  transform.hpp
include/autd3/modulation/audio_file/: raw_pcm.hpp  wav.hpp
include/autd3/native_methods/: autd3capi-backend-cuda.h  autd3capi-def.h  autd3capi-gain-holo.h  autd3capi-link-simulator.h  autd3capi-link-soem.h  autd3capi-link-twincat.h  autd3capi-link-visualizer.h  autd3capi-modulation-audio-file.h  autd3capi.h  utils.hpp
tests/: CMakeLists.txt  utils.hpp
tests/driver/: CMakeLists.txt  controller.cpp  datagram.cpp  firmware_info.cpp  rotation.cpp  sampling_config.cpp
tests/driver/common/: CMakeLists.txt  emit_intensity.cpp  loop_behavior.cpp  phase.cpp  sampling_config.cpp
tests/driver/datagram/: CMakeLists.txt  clear.cpp  debug.cpp  force_fan.cpp  reads_fpga_state.cpp  silencer.cpp  synchronize.cpp
tests/driver/datagram/gain/: CMakeLists.txt  cache.cpp  gain.cpp  segment.cpp  transform.cpp
tests/driver/datagram/modulation/: CMakeLists.txt  cache.cpp  modulation.cpp  radiation_pressure.cpp  segment.cpp  transform.cpp
tests/driver/datagram/stm/: CMakeLists.txt  focus.cpp  gain.cpp
tests/driver/geometry/: CMakeLists.txt  device.cpp  geometry.cpp  rotation.cpp  transducer.cpp
tests/gain/: CMakeLists.txt  bessel.cpp  cache.cpp  focus.cpp  gain.cpp  group.cpp  null.cpp  plane.cpp  trans_test.cpp  transform.cpp  uniform.cpp
tests/gain/holo/: amp.cpp  backend.cpp  constraint.cpp  greedy.cpp  gs.cpp  gspat.cpp  lm.cpp  naive.cpp  sdp.cpp
tests/internal/: CMakeLists.txt  controller.cpp  datagram.cpp  emit_intensity.cpp  firmware_info.cpp  fpga_info.cpp  rotation.cpp  stm.cpp
tests/internal/geometry/: device.cpp  geometry.cpp  transducer.cpp
tests/link/: CMakeLists.txt  audit.cpp  simulator.cpp  soem.cpp  twincat.cpp  visualizer.cpp
tests/modulation/: CMakeLists.txt  cache.cpp  fourier.cpp  modulation.cpp  radiation_pressure.cpp  sine.cpp  square.cpp  static.cpp  transform.cpp
tests/modulation/audio_file/: rawpcm.cpp  wav.cpp
tools/wrapper-generator/: Cargo.toml
tools/wrapper-generator/src/: main.rs
